--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   ejPractica:
-    image: ejpractice:latest
+    image: ejpractica:latest
     ports:
       - 8891:8891
     networks:
